backend/docker/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tracing-tutorial
  labels:
    istio-injection: enabled
