backend/docker/k8s/base/k6.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k6-deployment
  labels:
    app: k6
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k6
  template:
    metadata:
      labels:
        app: k6
    spec:
      containers:
        - name: k6
          tty: true
          ports:
            - containerPort: 6565
---
apiVersion: v1
kind: Service
metadata:
  name: k6
spec:
  selector:
    app: k6
  ports:
    - name: http-k6
      protocol: TCP
      appProtocol: http
      port: 6565
      targetPort: 6565
