backend/docker/k8s/base/loki.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki-deployment
  labels:
    app: loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
        - name: loki
          image: grafana/loki:2.7.3
          command:
            - /usr/bin/loki
            - -config.file=/etc/config/loki.yml
          ports:
            - containerPort: 3100
          volumeMounts:
            - name: config
              mountPath: /etc/config
        - name: promtail
          image: grafana/promtail:2.7.3
          command:
            - /usr/bin/promtail
            - -config.file=/etc/config/promtail.yml
          volumeMounts:
            - name: config
              mountPath: /etc/config
      volumes:
        - name: config
          configMap:
            name: config
            items:
              - key: loki.yml
                path: loki.yml
              - key: promtail.yml
                path: promtail.yml
---
apiVersion: v1
kind: Service
metadata:
  name: loki
spec:
  selector:
    app: loki
  ports:
    - name: http-loki
      protocol: TCP
      appProtocol: http
      port: 3100
      targetPort: 3100
