backend/docker/k8s/base/minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-deployment
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio
          command:
            - sh
            - -euc
            - |
              mkdir -p /data/loki-data && \
              mkdir -p /data/loki-ruler && \
              mkdir -p /data/tempo-data && \
              minio server /data
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  selector:
    app: minio
  ports:
    - name: http-minio
      protocol: TCP
      appProtocol: http
      port: 9000
      targetPort: 9000
