backend/docker/k8s/base/prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deployment
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.42.0
          command:
            - /bin/prometheus
            - --config.file=/etc/prometheus/prometheus.yml
            - --web.enable-remote-write-receiver
            - --enable-feature=native-histograms
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: config
              mountPath: /etc/prometheus
      volumes:
        - name: config
          configMap:
            name: config
            items:
              - key: prometheus.yml
                path: prometheus.yml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  selector:
    app: prometheus
  ports:
    - name: http-prometheus
      protocol: TCP
      appProtocol: http
      port: 9090
      targetPort: 9090
