backend/docker/k8s/base/tempo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempo-deployment
  labels:
    app: tempo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tempo
  template:
    metadata:
      labels:
        app: tempo
    spec:
      # FIXME: We store data locally in the container because if istio-injection is set to true and s3 is used as the backend, access to minio:9000 becomes impossible.
      # initContainers:
      #   - name: wait-minio
      #     image: busybox
      #     command:
      #       - sh
      #       - -c
      #       - while [[ $(curl -sSf -w "%{http_code}" http://minio:9000/minio/health/live -o /dev/null) != 200 ]]; do sleep 5; done
      containers:
        - name: tempo
          image: grafana/tempo:2.0.1
          command:
            - /tempo
            - -config.file=/etc/config/tempo.yml
          ports:
            - containerPort: 3200
            - containerPort: 14268 # jaeger
          volumeMounts:
            - name: config
              mountPath: /etc/config
      volumes:
        - name: config
          configMap:
            name: config
            items:
              - key: tempo.yml
                path: tempo.yml
---
apiVersion: v1
kind: Service
metadata:
  name: tempo
spec:
  selector:
    app: tempo
  ports:
    - name: http-tempo
      protocol: TCP
      appProtocol: http
      port: 3200
      targetPort: 3200
